Fri Jan 20 13:21:40 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        The main changes are adding DDS file configuration feature. The SimpleTcp
        is still a part of DDSDcps library and other concrete transport libraries
        such as SimpleUdp can be dynamically or statically loaded.
        See the projects\DDS\design\configuration_design.txt (from CVS) for
        various scenarios of using dds configurations:

        * dcpsexe_with_udp.mpb:
        
          Added base project for SimpleUdp transport applications.
          
        * dds/DdsDcps.mpc:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.inl:
        * dds/DCPS/transport/framework/TransportDefs.h:
        * dds/DCPS/transport/framework/TransportExceptions.h:
        * dds/DCPS/transport/framework/TransportFactory.cpp:
        * dds/DCPS/transport/framework/TransportFactory.h:
        * dds/DCPS/transport/framework/TransportFactory.inl:
        * dds/DCPS/transport/framework/TransportGenerator.cpp:
        * dds/DCPS/transport/framework/TransportGenerator.h:
        * dds/DCPS/transport/framework/TransportGenerator_rch.h:
        * dds/DCPS/transport/framework/TransportImpl.inl:
        * dds/DCPS/transport/framework/TransportImplFactory.h:
        * dds/DCPS/transport/framework/TransportImplFactory.inl:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.inl:
        * dds/DCPS/transport/simpleTCP/SimpleTcpGenerator.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpGenerator.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/simpleUDP/SimpleUdpConfiguration.cpp: