@@ -1,0 +1,33 @@
+project(SimpleUdp) : dcps {
+  sharedname = SimpleUdp
+  dynamicflags = SIMPLEUDP_BUILD_DLL
+
+  // override the orbsvcslib default library output directory
+  libout      = $(DDS_ROOT)/lib
+
+  includes    += $(DDS_ROOT) $(DDS_ROOT)/dds
+  pch_header   = SimpleUdp_pch.h
+  pch_source   = SimpleUdp_pch.cpp
+
+  Source_Files {
+    SimpleUdp.cpp
+    SimpleUdpConfiguration.cpp
+    SimpleUdpDataLink.cpp
+    SimpleUdpFactory.cpp
+    SimpleUdpGenerator.cpp
+    SimpleUdpLoader.cpp
+    SimpleUdpReceiveStrategy.cpp
+    SimpleUdpSendStrategy.cpp
+    SimpleUdpTransport.cpp
+    SimpleUdpSocket.cpp
+  }
+
+  Header_Files {
+  }
+
+  Inline_Files {
+  }
+
+  Template_Files {
+  }
+}
