@@ -1,0 +1,13 @@
+#ifndef SIMPLEUDP_PCH_H
+#define SIMPLEUDP_PCH_H
+
+#ifdef USING_PCH
+
+#include  "ace/INET_Addr.h"
+#include  "ace/Synch.h"
+#include  "ace/SOCK_Dgram.h"
+#include  "ace/Event_Handler.h"
+#include  "ace/Hash_Map_Manager.h"
+
+#endif
+#endif
